# support-escalation-agent-control-tower

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: adapters.py  cli.py  config.py  main.py  models.py  providers.py  services.py  storage.py  workflow.py
app/adapters/: __init__.py  fake.py  interfaces.py
app/api/: routes.py
app/core/: config.py  logging.py  security.py  storage.py
app/evals/: run_eval.py
app/models/: __init__.py  entities.py
app/services/: api_contract.py  approvals.py  artifacts.py  audit.py  capacity_planning.py  customers.py  demo.py  escalation_decision.py  escalation_quality.py  factory.py  finance_impact.py  knowledge.py  launch_checklist.py  metrics.py  policy_change_simulation.py  policy_drift.py  postmortem_review.py  provider_failover.py  provider_readiness.py  support_ops.py  support_ops_readiness.py  support_ops_sandbox.py  tickets.py  trace.py  workflow.py  (+1 more)
dashboard/: streamlit_app.py
docs/: api.md  architecture.md  azure-deployment-notes.md  evaluation.md  workflow.md
sample_data/: account_health_inputs.json  adapter_fixtures.json  customers.json  eval_dataset.json  kb_articles.json  tickets.json
scripts/: capacity_plan.py  demo_run.py
tests/: test_api.py  test_capacity_planning.py  test_escalation_decision.py  test_escalation_quality.py  test_finance_impact.py  test_policy_change_simulation.py  test_policy_drift.py  test_postmortem_review.py  test_provider_failover.py  test_support_ops_readiness.py
